--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -3,13 +3,26 @@ body {
 	font-family: Tahoma;
 	
 }
+header{
+	text-align: right;
+	font-size: 12px;
 
+}
+h1 {
+	text-align: center;
+	font-size: 30px;
+	font-family: 'Glory';
+}
 div#corpo{
 	width: 800px;
 	margin: auto;
 	padding: 20px; 
 	background-color: #fff;
 	box-shadow: 0px 0px 30px #777;
+}
+form#busca{
+	font-size: 12px;
+	text-align: right;
 }
 table.listagem {
 	width: 100%;
@@ -50,4 +63,9 @@ img.full {
 .list_jogadores {
 	font-family: Glory;
 	font-size: 18px;
+}
+footer{
+	text-align: center;
+	font-family: 'Courier New';
+	font-size: '12px';
 }
