--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -35,8 +35,8 @@ table.listagem tr {
 }
 
 table.listagem td {
-	#border: 1px solid #ddd;
-	padding: 10px;]
+	
+	padding: 10px;
 }
 
 table.listagem tr:nth-child(even) {
